tests/snapshots/e2e__check_permissions@multiline-if.snap
---
source: tests/e2e.rs
expression: out
---
permissions  1 finding  (1 medium)

  !  medium  implicit-repo-default
  .github/workflows/release.yaml

    entry-point workflow `.github/workflows/release.yaml` declares no `permissions:` and jobs [release] inherit the repository default
