tests/snapshots/e2e__check_permissions@nonstandard-composite-path.snap
---
source: tests/e2e.rs
expression: out
---
permissions  11 findings  (11 medium)

  !  medium  implicit-repo-default
  .github/workflows/audit.yml

    entry-point workflow `.github/workflows/audit.yml` declares no `permissions:` and jobs [audit] inherit the repository default

  !  medium  implicit-repo-default
  .github/workflows/ci.yml

    entry-point workflow `.github/workflows/ci.yml` declares no `permissions:` and jobs [build] inherit the repository default

  !  medium  implicit-repo-default
  .github/workflows/docs.yml

    entry-point workflow `.github/workflows/docs.yml` declares no `permissions:` and jobs [docs] inherit the repository default

  !  medium  implicit-repo-default
  .github/workflows/labeler.yml

    entry-point workflow `.github/workflows/labeler.yml` declares no `permissions:` and jobs [label] inherit the repository default

  !  medium  implicit-repo-default
  .github/workflows/lint.yml

    entry-point workflow `.github/workflows/lint.yml` declares no `permissions:` and jobs [lint] inherit the repository default

  !  medium  implicit-repo-default
  .github/workflows/nightly.yml

    entry-point workflow `.github/workflows/nightly.yml` declares no `permissions:` and jobs [nightly] inherit the repository default

  !  medium  implicit-repo-default
  .github/workflows/release.yml

    entry-point workflow `.github/workflows/release.yml` declares no `permissions:` and jobs [release] inherit the repository default

  !  medium  implicit-repo-default
  .github/workflows/smoke.yml

    entry-point workflow `.github/workflows/smoke.yml` declares no `permissions:` and jobs [smoke] inherit the repository default

  !  medium  implicit-repo-default
  .github/workflows/stale.yml

    entry-point workflow `.github/workflows/stale.yml` declares no `permissions:` and jobs [stale] inherit the repository default

  !  medium  implicit-repo-default
  .github/workflows/test.yml

    entry-point workflow `.github/workflows/test.yml` declares no `permissions:` and jobs [test] inherit the repository default

  !  medium  implicit-repo-default
  .github/workflows/typecheck.yml

    entry-point workflow `.github/workflows/typecheck.yml` declares no `permissions:` and jobs [typecheck] inherit the repository default
