tests/snapshots/e2e__check_permissions@orphans-job-env-input.snap
---
source: tests/e2e.rs
expression: out
---
permissions  1 finding  (1 medium)

  !  medium  implicit-repo-default
  .github/workflows/caller.yml

    entry-point workflow `.github/workflows/caller.yml` declares no `permissions:` and jobs [call] inherit the repository default
